--- a/package.json
+++ b/package.json
@@ -1,65 +1,42 @@
 {
-  "name": "@vitejs/plugin-react",
-  "version": "5.1.2",
-  "license": "MIT",
-  "author": "Evan You",
-  "description": "The default Vite plugin for React projects",
-  "keywords": [
-    "vite",
-    "vite-plugin",
-    "react",
-    "babel",
-    "react-refresh",
-    "fast refresh"
-  ],
-  "contributors": [
-    "Alec Larson",
-    "Arnaud Barré"
-  ],
-  "files": [
-    "types",
-    "dist"
-  ],
+  "name": "bg-remover",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
-  "exports": {
-    ".": "./dist/index.js",
-    "./preamble": "./types/preamble.d.ts"
-  },
   "scripts": {
-    "dev": "tsdown --watch ./src --watch ../common",
-    "build": "tsdown",
-    "prepublishOnly": "npm run build",
-    "test-unit": "vitest run"
+    "dev": "vite",
+    "build": "tsc -p tsconfig.app.json && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vitejs/vite-plugin-react.git",
-    "directory": "packages/plugin-react"
-  },
-  "bugs": {
-    "url": "https://github.com/vitejs/vite-plugin-react/issues"
-  },
-  "homepage": "https://github.com/vitejs/vite-plugin-react/tree/main/packages/plugin-react#readme",
   "dependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/plugin-transform-react-jsx-self": "^7.27.1",
-    "@babel/plugin-transform-react-jsx-source": "^7.27.1",
-    "@rolldown/pluginutils": "1.0.0-beta.53",
-    "@types/babel__core": "^7.20.5",
-    "react-refresh": "^0.18.0"
-  },
-  "peerDependencies": {
-    "vite": "^4.2.0 || ^5.0.0 || ^6.0.0 || ^7.0.0"
+    "@imgly/background-removal": "^1.7.0",
+    "@tailwindcss/vite": "^4.1.18",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
+    "onnxruntime-web": "^1.21.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-dropzone": "^14.4.0",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
-    "@vitejs/react-common": "workspace:*",
-    "babel-plugin-react-compiler": "19.1.0-rc.3",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
-    "rolldown": "1.0.0-beta.53",
-    "tsdown": "^0.17.1"
+    "@eslint/js": "^9.39.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^9.39.1",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
+    "globals": "^16.5.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
   }
 }
