--- a/package.json
+++ b/package.json
@@ -12,20 +12,16 @@
   "dependencies": {
     "@imgly/background-removal": "^1.7.0",
     "@tailwindcss/vite": "^4.1.18",
-    "@tensorflow/tfjs": "^4.11.0",
-    "@types/react-dropzone": "^4.2.2",
-    "@upscalerjs/esrgan-slim": "^1.0.0-beta.12",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.33.0",
+    "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "onnxruntime-web": "^1.21.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.4.0",
-    "tailwind-merge": "^3.4.0",
-    "upscaler": "^1.0.0-beta.19"
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
