--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@imgly/background-removal": "^1.7.0",
     "@tailwindcss/vite": "^4.1.18",
+    "@tensorflow/tfjs": "^4.11.0",
+    "@types/react-dropzone": "^4.2.2",
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.29.2",
+    "framer-motion": "^12.33.0",
     "lucide-react": "^0.563.0",
     "onnxruntime-web": "^1.21.0",
     "react": "^19.2.0",
