--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,12 @@
 {
-    "headers": [
+    "rewrites": [
         {
-            "source": "/assets/(.*)",
-            "headers": [
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
+            "source": "/((?!api-docs|admin/blog).*\\..*)",
+            "destination": "/$1"
         },
         {
-            "source": "/(.*)\\.(png|jpg|jpeg|svg|webp|ico)",
-            "headers": [
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
